--- a/styles.css
+++ b/styles.css
@@ -456,20 +456,19 @@
  }
 
  .product-item h3 {
-   font-size: 1.25rem;
    font-weight: bold;
    margin-bottom: 0.5rem;
- }
-
- .product-item p {
-   color: #4a5568;
-   margin-bottom: 0.5rem;
+   background-color: black;
+   color: white;
+   border-radius: 9999px;
  }
 
  .product-item .price {
-   font-size: 1.125rem;
    font-weight: bold;
    margin-bottom: 1rem;
+   background-color: black;
+   color: white;
+   border-radius: 9999px;
  }
 
  .product-item button {
