--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,113 @@
    font-weight: bold;
  }
 
+ /* style about (brest) */
+ brest {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   align-items: center;
+   gap: 30px;
+   padding: 20px;
+   background-color: black;
+   color: white;
+   margin-bottom: 1rem;
+ }
+
+ brest img {
+   border-radius: 0px 200px 0px 200px;
+   filter: drop-shadow(15px 7px 5px rgba(255, 255, 255, 0.8));
+ }
+
+ brest img:hover {
+   pointer-events: transform;
+   transform: translateY(-20px);
+ }
+
+ brest h2 {
+   font-size: 2rem;
+   font-weight: bold;
+   margin-bottom: 1rem;
+ }
+
+ brest p {
+   font-size: 1rem;
+   line-height: 1.5;
+   max-width: 600px;
+   margin: 0 auto;
+ }
+
+ .kontak {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   padding: 0 auto;
+   color: black;
+   text-align: center;
+   max-width: 88%;
+ }
+
+ .map {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: auto;
+   height: 100%;
+   padding: 0.5rem 1rem;
+   margin: 1rem;
+   border-radius: 25px;
+ }
+
+ .map iframe {
+   border-radius: 25px;
+ }
+
+ form h2 {
+   font-size: 2rem;
+   font-weight: bold;
+   text-align: center;
+ }
+
+ .kontak form {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+   width: 100%;
+   margin-left: 5px;
+ }
+
+ .kontak input,
+ .kontak textarea {
+   width: 100%;
+   padding: 0.5rem;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   font-size: 1rem;
+ }
+
+ .kontak button {
+   background-color: black;
+   color: white;
+   padding: 0.5rem 1rem;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+ }
+
+ .kontak button:hover {
+   background-color: #333;
+ }
+
+ .direct {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 1rem;
+   text-align: center;
+   text-decoration: none;
+ }
+
  /* Hero Section Styles */
  .hero {
    position: relative;
@@ -615,19 +722,46 @@
      width: 90%;
    }
 
-   .reservasi {
-     width: 90%;
-     padding: 10px;
+   brest {
+     flex-direction: column;
+     text-align: center;
    }
 
-   .reservasi h1 {
-     font-size: 20px;
+   brest h1,
+   brest p {
+    margin-bottom: 0.5rem;
+    font-weight: 400;
+    font-family: Fredericka the Great;
    }
 
-   .reservasi input,
-   .reservasi button {
-     font-size: 12px;
-     padding: 8px;
+   brest h1 {
+    font-size: 2rem;
+   }
+
+   .kontak form {
+     display: flex;
+     flex-direction: column;
+     width: 100%;
+     margin: 0 auto;
+   }
+
+   .kontak input,
+   .kontak textarea {
+     width: 100%;
+   }
+
+   .kontak button {
+     width: 100%;
+   }
+
+   .map {
+     flex-direction: column;
+     text-align: center;
+   }
+
+   .map iframe {
+     width: 100%;
+     height: 30vh;
    }
 
    .product-grid {
