--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@
  main {
      background-image: url(img/papan.jpeg);
      background-size: 100% 50%;
+     margin-top: 1rem;
  }
 
  /* Product Grid Styles */
