--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
      background-color: #f5f0e6;
      margin: 0;
      padding: 0;
-     overflow-x: hidden;
  }
 
  /* Header Styles */
@@ -235,6 +234,7 @@
      display: flex;
      flex-direction: column;
      margin-top: 5%;
+     margin-bottom: 1rem;
      font-size: 1.5rem;
      font-weight: bold;
  }
